--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MONGOURI=mongodb+srv://portfolio:dfhkebfk47874hkfn4rd@cluster0.y3k8w.mongodb.net
 EMAIL=resumeportfolio09@gmail.com
 PASSWORD=ckbixsjnlhkzkvdq
 JWT_SECRET=98475ihnfkgno4utrnflnlfnlknr49rhl4kf454g
-RAZORPAY_KEY_ID =rzp_test_nQ8V25WiDaW3lt
+RAZORPAY_KEY_ID=rzp_test_nQ8V25WiDaW3lt
 RAZORPAY_KEY_SECRET=MZSGdjye6ZZOzkeUVJqoDSS0
